--- a/apps/plugin/ui-src/index.html
+++ b/apps/plugin/ui-src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Figma to Code</title>
+    <title>Figma to Code Harsh</title>
   </head>
   <body>
     <div id="root"></div>
